--- a/main.css
+++ b/main.css
@@ -128,6 +128,9 @@ hr{
 .articletitle p a{
   text-decoration: var(--my-text-decoration);
 }
+.articletitle p a:hover{
+  color: #800080;
+}
 .articleheading{
   font-size: 16px;
   margin-bottom: 3px;
