--- a/main.css
+++ b/main.css
@@ -151,6 +151,7 @@ hr{
    padding: 24px 15px;
    margin-top: 40px;
    margin-bottom: 20px;
+   width: 80%;
 }
 #courseheader{
   font-size: var(--my-font-size);
